--- a/launches.html
+++ b/launches.html
@@ -59,7 +59,7 @@
     <main>
       <section class="section">
         <h1 class="heading heading-primary">Next launch</h1>
-        <div class="next-launch container">
+        <div class="next-launch container launch-next">
           <div class="lds-default">
             <div></div>
             <div></div>
@@ -134,9 +134,7 @@
           placeholder="Your email address"
           class="form__input"
         />
-        <button type="submit" name="submit" class="btn btn--cta">
-          Subscribe
-        </button>
+        <button type="submit" name="submit" class="btn">Subscribe</button>
       </form>
 
       <a href="index.html" class="logo logo--footer"> In<span>x</span>space </a>
