--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,11 @@
             opportunity employer offering competitive salaries, comprehensive
             health benefits and equity packages.
           </blockquote>
-          <a href="https://www.spacex.com/careers" target="_blank" class="btn">
+          <a
+            href="https://www.spacex.com/careers"
+            target="_blank"
+            class="btn btn--cta"
+          >
             Learn more at spacex.com</a
           >
         </div>
@@ -205,9 +209,7 @@
           placeholder="Your email address"
           class="form__input"
         />
-        <button type="submit" name="submit" class="btn btn--cta">
-          Subscribe
-        </button>
+        <button type="submit" name="submit" class="btn">Subscribe</button>
       </form>
 
       <a href="index.html" class="logo logo--footer"> In<span>x</span>space </a>
