--- a/rockets.html
+++ b/rockets.html
@@ -92,9 +92,7 @@
           placeholder="Your email address"
           class="form__input"
         />
-        <button type="submit" name="submit" class="btn btn--cta">
-          Subscribe
-        </button>
+        <button type="submit" name="submit" class="btn">Subscribe</button>
       </form>
 
       <a href="index.html" class="logo logo--footer"> In<span>x</span>space </a>
